5.2.1

- Core libraries
  - Fixed an inadvertant error during error reporting in the `numerator`
    and `denominator` procedures when passed non-finite flonums (#1730).
  - Fixed a bug where optimisations for `irregex-match?` would cause
    runtime errors due to the inlined specialisations not being
    fully-expanded (see #1690).
  - Irregex has been updated to upstream 0.9.9, which fixes behaviour
    of irregex-replace/all with positive lookbehind so all matches are
    replaced instead of only the first (reported by Kay Rhodes), and
    a regression regarding replacing empty matches which was introduced
    by the fixes in 0.9.7 (reported by Sandra Snan).  Also, the
    http-url shorthand now allows any top-level domain and the old
    "top-level-domain" now also supports "edu" (fixed by Sandra Snan).
    Finally, a problem was fixed with capturing groups inside a kleene
    star, which could sometimes return incorrect parts of the match.
  - current-milliseconds has been deprecated in favor of the name
    current-process-milliseconds, to avoid confusion due to naming
    of current-milliseconds versus current-seconds, which do something
    quite different.  Also, its definition has been tweaked to
    guarantee that it returns the time since process startup.  On
    Windows, it will now return sane values after 24 days of uptime.
    On UNIX, the values returned will be precise to the millisecond
    instead of rounded down to the nearest second at startup (which
    would result in erratic startup times).
  - The default mode for files created by `file-open' has been changed
    to 0666 (plus whatever change the effective umask applies), rather
    than 0744 (see #1698).
  - Fixed type database entry for "log" with second arg (fixes #1725).
  - Made topological-sort behave better when dependency target is listed
    multiple times by concatenating dependencies (fixes #1185).

- Runtime system
  - Sleeping primordial thread doesn't forget mutations made to