@@ -451,6 +451,10 @@
       (irregex-extract (irregex "[aeiou]*") "foobarbaz"))
   (test-equal '("Line 1\n" "Line 2\n" "Line 3")
       (irregex-split 'bol "Line 1\nLine 2\nLine 3"))
+  (test-equal '("foo\n" "bar\n" "baz\n")
+      (irregex-extract '(: bol (+ alpha) newline) "\nfoo\nbar\nbaz\n"))
+  (test-equal '("\nblah" "\nblah" "\nblah")
+      (irregex-extract '(: newline "blah" eol) "\nblah\nblah\nblah\n"))
   )
 
 
