@@ -6,15 +6,17 @@
   - Fixed a bug where optimisations for `irregex-match?` would cause
     runtime errors due to the inlined specialisations not being
     fully-expanded (see #1690).
-  - Irregex has been updated to upstream 0.9.9, which fixes behaviour
+  - Irregex has been updated to upstream 0.9.10, which fixes behaviour
     of irregex-replace/all with positive lookbehind so all matches are
     replaced instead of only the first (reported by Kay Rhodes), and
     a regression regarding replacing empty matches which was introduced
     by the fixes in 0.9.7 (reported by Sandra Snan).  Also, the
     http-url shorthand now allows any top-level domain and the old
     "top-level-domain" now also supports "edu" (fixed by Sandra Snan).
-    Finally, a problem was fixed with capturing groups inside a kleene
+    Also, a problem was fixed with capturing groups inside a kleene
     star, which could sometimes return incorrect parts of the match.
+    Finally, "bol" handling was fixed to handle newlines consistently
+    so that multiple matches don't overlap (reported by Sandra Snan).
   - current-milliseconds has been deprecated in favor of the name
     current-process-milliseconds, to avoid confusion due to naming
     of current-milliseconds versus current-seconds, which do something
